# eYRC-2022_HolA_Bot

./: README.md  holabot_uses
task_2_boilerplate/: CMakeLists.txt  controller.py  goals.json  package.xml  task2_output.txt
task_2_boilerplate/include/holabot_task2/: custom_force.h
task_2_boilerplate/launch/: gazebo.launch
task_2_boilerplate/meshes/: base_link.mtl
task_2_boilerplate/scripts/: feedback.py
task_2_boilerplate/src/: custom_force.cpp
task_2_boilerplate/urdf/: hola_bot.urdf
task_2_boilerplate/worlds/: hola_camera.world
